[package]
name = "bot_akimo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/akimon658/bot_akimo"

[profile.release]
codegen-units = 1
lto = fat
opt-level = "s"
strip = "symbols"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
